@@ -304,6 +304,20 @@ enum c3x_label {
 	CL_IDLE,
 	CL_FORTIFIED,
 	CL_SENTRY,
+	CL_MINING,
+	CL_IRRIGATING,
+	CL_BUILDING_FORTRESS,
+	CL_BUILDING_ROAD,
+	CL_BUILDING_RAILROAD,
+	CL_PLANTING_FOREST,
+	CL_CLEARING_FOREST,
+	CL_CLEARING_WETLANDS,
+	CL_CLEARING_DAMAGE,
+	CL_BUILDING_AIRFIELD,
+	CL_BUILDING_RADAR_TOWER,
+	CL_BUILDING_OUTPOST,
+	CL_BUILDING_BARRICADE,
+	CL_BUILDING_COLONY,
 	CL_WORKING,
 	CL_INTERCEPTING,
 	CL_MOVING,
